# nan_baidu_maincontrol-_240604_zhaijiao_camera_ipm

./: 123.cpp  main.c  main.cpp
.cache/clangd/index/: calibration.cpp.08437E35A7577233.idx  calibration.cpp.89D5848773740415.idx  calibration.cpp.C3D3A5D1B7EAF091.idx  common.hpp.1F9FCE6AC6104142.idx  common.hpp.2463E2AF1E714B05.idx  common.hpp.446313E0A4FB94D2.idx  common.hpp.736E0B3EAA62C218.idx  common.hpp.7CAE6ACEB9897CAE.idx  common.hpp.8899C68535C7F9C9.idx  common.hpp.A6B5C0F7B45681B2.idx  common.hpp.C598F5FF2C016711.idx  common.hpp.F377E02D6D9B6D51.idx  controlcenter_cal.cpp.14BC5B1A1C08DF92.idx  controlcenter_cal.cpp.3D0CAB8511061873.idx  controlcenter_cal.cpp.3FE30A7B701C4B41.idx  controlcenter_cal.cpp.4EC8B3E8CECBC4B4.idx  controlcenter_cal.cpp.551E32459F2D39F5.idx  (+91 more)
res/calibration/: assessment.txt  calibration.xml
res/calibration1/: assessment.txt  calibration.xml  calibration_me.xml
src/: CMakeLists.txt
src/include/: common.hpp  ipm.hpp  ipm_260603.hpp  ipm_beifen240315.hpp  ipm_jie_fangcheng.hpp  uart.hpp
src/src/: controlcenter_cal.cpp  controlcenter_cal2.cpp  controlcenter_cal_beifen.cpp  controlcenter_cal_ipm.cpp  icar_pic.cpp  image_preprocess.cpp  motion_controller.cpp  motion_controller2.cpp  perspective_mapping.cpp
src/src/config/: motion.json
src/src/detection/: bridge_detection.cpp  depot_detection.cpp  farmland_detection.cpp  granary_detection.cpp  qiao.cpp  slowzone_detection.cpp
src/src/recognition/: cross_recognition.cpp  parking.cpp  ring_recognition.cpp  track_recognition.cpp
src/tool/: calibration.cpp  calibration4.cpp
(+2 files in other folders)
